Fix overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,7 +38,7 @@ body {
 	width: 100vw;
 	height: 100vh;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overscroll-behavior: none;
 }
 
